[gd_scene load_steps=8 format=3 uid="uid://b8n48n38pjppc"]

[ext_resource type="Script" uid="uid://c4dlrexmrayjn" path="res://scenes/items/tools/fishing_pole/fishing_pole.gd" id="1_xhvsk"]
[ext_resource type="PackedScene" uid="uid://ca4ddr77u1a03" path="res://scenes/items/tools/bobber/bobber.tscn" id="2_5dmys"]
[ext_resource type="PackedScene" uid="uid://bkjur5rlck3uc" path="res://scenes/items/tools/fishing_pole/rope.tscn" id="2_gn0oc"]
[ext_resource type="Texture2D" uid="uid://bt80r07c3tl8w" path="res://icon.svg" id="4_4fmbj"]

[sub_resource type="BoxMesh" id="BoxMesh_xhvsk"]
size = Vector3(0.1, 2, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_4fmbj"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3gnoo"]
properties/0/path = NodePath(".:bobber_position")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="FishingPole" type="Node3D"]
script = ExtResource("1_xhvsk")
metadata/_custom_type_script = "uid://chktvyv33f3bf"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("BoxMesh_xhvsk")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.615119)
visible = false
mesh = SubResource("BoxMesh_4fmbj")

[node name="Rope" parent="." instance=ExtResource("2_gn0oc")]
top_level = true

[node name="BobberAnchor" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="Bobber" parent="BobberAnchor" instance=ExtResource("2_5dmys")]
sleeping = true

[node name="CastAnchor" type="Node3D" parent="BobberAnchor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
top_level = true
visible = false

[node name="Decal" type="Decal" parent="BobberAnchor/CastAnchor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.40018, 0)
size = Vector3(1, 9.28113, 1)
texture_albedo = ExtResource("4_4fmbj")
emission_energy = 16.0
upper_fade = 0.000264038
lower_fade = 0.00047593

[node name="OutBobber" type="Node3D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_3gnoo")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
